--- a/PreParcial1/css/style.css
+++ b/PreParcial1/css/style.css
@@ -1,3 +1,6 @@
+*{
+    
+}
 header{
     display: flex;
     flex-grow: 3;
@@ -30,12 +33,6 @@ ul li{
     align-items: center;
 }
 
-.logo{
-    display: flex;
-    flex-grow: 1;
-    width: 120px;
-}
-
 .profile a svg{
     display: inline-flex;
     justify-content: flex-start;
@@ -44,6 +41,13 @@ ul li{
     height: 32px;
 
 }
+.logo{
+    display: flex;
+    flex-grow: 1;
+    width: 120px;
+
+}
+
 
 main{
     display: flex;
